objects/nFORCE__Screen__c.object
<CustomObject>
    <fields>
        <fullName>nFORCE__Disable_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. The admin manually populates this field. It controls whether export to PDF or the brower&apos;s print option is used. When enabled, export to PDF is used when printing a credit memo. When disabled, the browser&apos;s print is used when printing a credit memo. By default, this is disabled. It is recommended that this be enabled.</description>
        <label>Disable Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Show_Link_To_Context_Object__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is optional. The default value is true. When the value is set to true, the credit memo will diplay a link to return to the context object.</description>
        <label>Show Context Object Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nPortal__Add_Multi_Record_Display_Icon__c</fullName>
        <description>Administrators populate this long text area field with the URL of the image that displays multiple records in Online Application.</description>
        <inlineHelpText>Enter the URL for the image.</inlineHelpText>
        <label>Add Multi Record Display Icon</label>
        <length>2083</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nPortal__Maximum_Number_of_Records__c</fullName>
        <description>Administrators populate this number field to set the maximum number of records a user can add.</description>
        <inlineHelpText>Enter the maximum number of records that users can add.</inlineHelpText>
        <label>Maximum Number of Records</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nPortal__Minimum_Number_of_Records__c</fullName>
        <description>Administrators populate this number field to set the minimum number of records a user can add.</description>
        <inlineHelpText>Enter the minimum number of records that users can add.</inlineHelpText>
        <label>Minimum Number of Records</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nPortal__OA_Review_Multiple_Record_Entry_Label__c</fullName>
        <description>Administrators populate this string field to display the header name for each record entry in numerical order on the Review and Submit page.</description>
        <inlineHelpText>Enter a header name for the record.</inlineHelpText>
        <label>OA Review Multiple Record Entry Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Screen</label>
    <listViews>
        <fullName>nFORCE__All</fullName>
        <columns>NAME</columns>
        <columns>nFORCE__lookupKey__c</columns>
        <columns>nPortal__Add_Multi_Record_Display_Icon__c</columns>
        <columns>nFORCE__Show_Link_To_Context_Object__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Screen Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>